added meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,12 +3,24 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="../src/images/logo.png" />
+  <link rel="icon" href="./icons/favicon.ico" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta
+  name="Foofie"
+  content="Foodie order anytime, anywhere"
+/>
+<meta property="og:title" content="Foodie" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://foodie-online-food-ordering-website.onrender.com/" />
+<meta name="description" content="Foodie (online food order Website)" property="og:description">
+<meta name="description" content="/icons/desc.png" property="og:image">
+<meta name="keywords" content="Foodie,online food order" />
+<meta name="author" content="Rahul" />
+<meta name="application-name" content="Foodie" />
+  <link rel="apple-touch-icon" href="./icons/favicon.ico" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +36,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>foodie</title>
-  <link rel="icon" href={logo.svg}>
+  <!-- <link rel="icon" href={logo.svg}> -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
