added meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://foodie-online-food-ordering-website.onrender.com/" />
 <meta name="description" content="Foodie (online food order Website)" property="og:description">
-<meta name="description" content="/icons/desc.png" property="og:image">
+<meta name="description" content="/icons/desc.jpg" property="og:image">
 <meta name="keywords" content="Foodie,online food order" />
 <meta name="author" content="Rahul" />
 <meta name="application-name" content="Foodie" />
